log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: generic-claim
        - name: config
          configMap:
            name: exercises-config
            items:
              - key: "information.txt"
                path: "information.txt"
      containers:
        - name: log-output-server
          image: drellxor/log-output:8.0
          volumeMounts:
            - mountPath: /usr/src/app/files
              name: shared-volume
            - mountPath: /config
              name: config
              readOnly: true
        - name: log-output-writer
          image: drellxor/log-output:8.0
          volumeMounts:
            - mountPath: /usr/src/app/files
              name: shared-volume
          command: ["python3", "writer.py"]
